linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
  labels:
    app: linkding
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: linkding
          image: 127.0.0.1:30500/linkding:1.46.0-patched
          imagePullPolicy: IfNotPresent
          ports:
            - name: linkding
              containerPort: 9090
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkding-data-pvc
